--- a/KRX.ipynb
+++ b/KRX.ipynb
@@ -228,14 +228,36 @@
       "metadata": {
         "id": "EclTTUn19W_U",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "40079f50-e736-468d-8602-7b9717e13ee5"
       },
       "cell_type": "code",
       "source": [
-        ""
+        "import bs4\n",
+        "\n",
+        "def get_beautiful_soup(url):\n",
+        "\treturn bs4.BeautifulSoup(requests.get(url).text, \"html5lib\")\n",
+        "\n",
+        "\n",
+        "url = 'http://www.multpl.com/table'\n",
+        "\n",
+        "data = get_beautiful_soup(url)\n",
+        "data_1 = data.find_all('td', 'right')\n",
+        "print(data_1[0].text.replace('estimate', '').replace('\\n',''))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "25.13\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
